--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "lint": "npx eslint . --ext ts --report-unused-disable-directives --max-warnings 0",
     "dev": "tsx watch ./src/index.ts",
-    "start": "node --experimental-specifier-resolution=node --loader ts-node/esm ./dist/index.js"
+    "start": "node --experimental-specifier-resolution=node --loader ts-node/esm ./dist/index.js",
+    "test": "jest"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -20,11 +21,14 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.8",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "eslint": "8.57.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.5",
     "tsx": "^4.15.7",
     "typescript": "^5.5.2"
   }
