exclude test files from build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,8 @@
   },
   "include": ["**/*.ts"],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "jest.config.ts",
+    "test"
   ]
 }
