--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,11 +16,6 @@
     "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
     "incremental": true,
-    "paths": {
-      "@/*": [
-        "./src/*"
-      ]
-    },
 
     /* Type Checking */
     "strict": true,                                      /* Enable all strict type-checking options. */
@@ -33,7 +28,6 @@
   "include": ["**/*.ts"],
   "exclude": [
     "node_modules",
-    "jest.config.ts",
-    "test"
+    "jest.config.ts"
   ]
 }
