--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "noFallthroughCasesInSwitch": true,               /* Enable error reporting for fallthrough cases in switch statements. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "include": ["src/**/*.ts"],
+  "include": ["**/*.ts"],
   "exclude": [
     "node_modules",
     "jest.config.ts"
